<resources>
    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_right_drawer">Filters</string>

    <string name="menu_item_home">Home</string>
    <string name="menu_item_search">Search</string>

    <string name="application_title">Enter product you want to eat and click "Search"!</string>
    <string name="am_search_button">Search by calories</string>
    <string name="asr_search_button">Search</string>
    <string name="asr_title">Search by calories</string>
    <string name="asr_title_2">Введите максимальную калорийность на 100г</string>
    <string name="asr_search_hint">Ingredient...</string>
    <string name="asr_search_calories_hint">Max calories per portion...</string>
    <string name="asr_clear">Clear</string>
    <string name="asr_add_to_list">Add</string>
    <string name="asr_cancel">Cancel</string>

    <string name="asp_title_1">Shopping List</string>
    <string name="asp_title_2">Favorites</string>

    <string name="arr_title">Recipes</string>
    <string name="rf_back">Back to the search</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="measure"> g</string>
    <string name="select_all_checkbox"> Add all to shop list</string>

    <string name="error_message">Sorry, no recipe was found. Check your query and Internet connection and try again.</string>

    <string-array name="navigationDrawer">
        <item>Home</item>
        <item>Search by calories</item>
        <item>All recipes</item>
        <item>Favorites</item>
        <item>Shopping List</item>
    </string-array>

    <string-array name="dietLabels">
        <item>High-Protein</item>
        <item>Low-Carb</item>
        <item>Low-Fat</item>
        <item>Balanced</item>
        <item>Low-Sodium</item>
    </string-array>

    <string-array name="healthLabels">
        <item>Low-sugar</item>
        <item>Sugar-conscious</item>
        <item>Low-fat-abs</item>
        <item>Gliten-free</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Paleo</item>
        <item>Wheat-free</item>
        <item>Dairy-free</item>
        <item>Egg-free</item>
        <item>Soy-free</item>
        <item>Fish-free</item>
        <item>Dhellfish-free</item>
        <item>Tree-nut-free</item>
        <item>No-oil-added</item>
        <item>Alcohol-free</item>
    </string-array>
</resources>
