<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/activity_search_recipes">

    <LinearLayout
        android:id="@+id/asr_main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/asr_title"
            android:textSize="@dimen/title_font"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/separator" />

        <LinearLayout
            android:id="@+id/search_layout"
            android:orientation="vertical"
            android:layout_width="@dimen/asr_editText_width"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_product"
                android:layout_width="@dimen/asr_editText_width"
                android:layout_height="wrap_content"
                android:hint="@string/asr_search_hint"
                android:layout_marginTop="@dimen/separator"/>

            <EditText
                android:inputType="number"
                android:id="@+id/et_max_calories"
                android:layout_width="@dimen/asr_editText_width"
                android:layout_height="wrap_content"
                android:hint="@string/asr_search_calories_hint"
                android:layout_marginTop="@dimen/separator"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout_2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top" >

        <Button
            android:id="@+id/sa_searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asr_search_button" />
    </LinearLayout>


</LinearLayout>