<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mainfoto_2"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/application_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/title_font"/>

            <Button
                android:id="@+id/spa_searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am_search_button"
                android:textSize="@dimen/button_font"
                android:layout_marginTop="@dimen/separator"/>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/toast_1"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/spa_searchButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackground"
            android:text="@string/asp_title_2"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackground"
            android:text="@string/asp_title_1"
            android:textSize="@dimen/title_button_font"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/toast_4"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            />

    </LinearLayout>
</LinearLayout>
